# study-anything

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  QUICKSTART.md  README.md  SECURITY.md  START_HERE.command  pyproject.toml
.codebuddy-plugin/: marketplace.json
.cognitive-loop/: config.yaml  evals.yaml  loops.yaml  permissions.yaml  release-stack-policy.yaml  risk.yaml  watchers.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: agent_eval_evidence_failure.md  bug_report.md  docs_confusion.md  external-security-audit.yml  feature_request.md  local_gateway_failure.md  platform_import_failure.md  published_image_pull_failure.md
.github/workflows/: ci.yml  delivery-clearance-personal-release.yml  docker-images.yml  published-image-smoke.yml  python-supply-chain.yml  reliability-soak.yml  security.yml
apps/api/: Dockerfile
apps/web/: Dockerfile  index.html  package-lock.json  package.json  server.mjs  vite.config.ts
docs/: VALIDATION.md  adopter-evidence-archive.md  adopter-onboarding.md  adoption-telemetry.md  adoption.md  agent-contract.md  agent-eval.md  api.md  architecture.md  branching.md  canonical-checkout.md  cbb-controlled-adoption.md  cbb-external-adoption-attestation.md  cbb-external-audit-intake.md  cbb-protocol-v1-agentic-evolution.md  cbb-protocol-v1-conformance.md  cbb-protocol-v1-contracts.md  cbb-protocol-v1-development-plan.md  cbb-protocol-v1-kernel.md  cbb-protocol-v1-outcomes.md  cbb-protocol-v1-provenance.md  cbb-protocol-v1-scenarios-and-qualification.md  client-report-delivery-class.md  client-report-operator-handoff-rehearsal.md  code-review-delivery-class.md  code-review-operator-handoff-rehearsal.md  cognitive-loop-adoption-cookbook.md  cognitive-loop-code-review.md  cognitive-loop-contracts.md  commercial-model.md  commercial-readiness.md  compatibility-and-trademark.md  controlled-handoff-runbook.md  customer-delivery-rehearsal.md  customer-delivery-trust-envelope.md  customer-handoff-package.md  delivery-class-registry.md  delivery-trust-case-harness.md  delivery-trust-case-pack.md  delivery-trust-receipt.md  (+111 more)
evals/: README.md
platform/: ecosystem-submission.json  release-stack.json  study-anything-platform-tools.json
plugins/: registry.json
requirements/: README.md  locked-dev-full.txt  locked-full.txt  locked-policy.txt  locked-skill.txt
scripts/: agentdojo_scorer_bridge.py  attention_reconstruction_lite.py  bootstrap_from_release.py  cbb_controlled_adoption.py  cbb_delivery_harness.py  cbb_delivery_outcome.py  cbb_evolution_gate.py  cbb_external_adoption_attestation.py  cbb_external_audit_intake.py  cbb_gate.py  cbb_protocol_cli.py  cbb_provenance.py  cbb_receipt_chain.py  cbb_self_intake.py  check_env.py  client_report_delivery_class_handoff.py  code_review_delivery_class_handoff.py  cognitive_loop_apply_plan.py  cognitive_loop_artifact_console.py  cognitive_loop_cli.py  cognitive_loop_event_store.py  cognitive_loop_evolution.py  cognitive_loop_evolution_pack_export.py  cognitive_loop_improvement_comparator.py  cognitive_loop_mastra_evolution_receipt.py  cognitive_loop_mastra_evolution_replay.py  cognitive_loop_patch_apply_sandbox.py  cognitive_loop_patch_proposal.py  cognitive_loop_personal_mode.py  cognitive_loop_recipe_cli.py  cognitive_loop_review.py  cognitive_loop_review_agent_acceptance_bundle.py  cognitive_loop_review_agent_handoff.py  cognitive_loop_review_agent_policy_gate.py  cognitive_loop_review_agent_pr_comment.py  cognitive_loop_review_agent_receipt.py  cognitive_loop_study_adapter_cli.py  cognitive_loop_watcher_ingest.py  cognitive_loop_watcher_runner.py  customer_handoff_package.py  (+362 more)
validation/: README.md
(+1769 files in other folders)
