[project]
name = "study-anything"
version = "0.3.31-alpha"
description = "Local-first Dual-Loop Trust Harness with the Study Anything learning adapter."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Study Anything contributors" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
skill = []
crypto = [
  "cryptography>=42.0.0",
]
full = [
  "uvicorn[standard]>=0.30.0",
  "langgraph>=0.2.0",
  "langgraph-checkpoint-postgres>=2.0.0",
  "psycopg[binary,pool]>=3.2.0",
  "langfuse>=2.50.0",
  "cryptography>=42.0.0",
  "FalkorDB>=1.6.1,<2.0",
  "lancedb>=0.24.0,<1.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0,<2.0",
  "PyYAML>=6.0.2,<7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.setuptools.package-dir]
"" = "apps/api"

[tool.setuptools.packages.find]
where = ["apps/api"]
include = ["study_anything*"]
