[project]
name = "study-anything"
version = "0.3.32-alpha"
description = "Delivery Clearance: open, local-first AI Delivery Clearance Protocol and reference harness."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "Apache-2.0"
authors = [{ name = "Delivery Clearance contributors" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
]

[project.scripts]
delivery-clearance = "study_anything.cbb.personal.cli:main"
delivery-clearance-plugin-evidence = "study_anything.cbb.plugin_evidence.cli:main"

[project.optional-dependencies]
skill = []
crypto = [
  "cryptography>=42.0.0",
]
hosted = [
  "PyJWT[crypto]>=2.13.0,<3.0",
]
full = [
  "uvicorn[standard]>=0.30.0",
  "langgraph>=0.2.0",
  "langgraph-checkpoint-postgres>=2.0.0",
  "langsmith>=0.8.18",
  "psycopg[binary,pool]>=3.2.0",
  "langfuse>=2.50.0",
  "cryptography>=42.0.0",
  "PyJWT[crypto]>=2.13.0,<3.0",
  "FalkorDB>=1.6.1,<2.0",
  "lancedb>=0.24.0,<1.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0,<2.0",
  "PyYAML>=6.0.2,<7.0",
]

[dependency-groups]
build = [
  "setuptools>=75.0.0,<81.0.0",
]

[build-system]
requires = ["setuptools>=75.0.0,<81.0.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.setuptools.package-dir]
"" = "apps/api"

[tool.setuptools.packages.find]
where = ["apps/api"]
include = ["study_anything*"]
